--- a/files/style.css
+++ b/files/style.css
@@ -1,3 +1,11 @@
 h1 {
     color: red;
+    font-family: 'FontAwesome';
+}
+
+@font-face {
+    font-family: 'FontAwesome';
+    font-style: normal;
+    font-weight: normal;
+    src: url("https://sub2.reireias.link/fa-regular-400.woff2") format("woff2");
 }
